Update page - safer-economy.html fe633ab276e045f7aea06aa9cc1a2d7c58c4a2f5

--- a/es/education/index.html
+++ b/es/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Educación</h1>
           
-            <p class="small-text">Última actualización&nbsp;26 de febrero de 2021 a las 12:16 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;11 de marzo de 2021 a las 11:29 a. m.</p>
           
         </div>
       </div>
@@ -227,11 +227,11 @@
 
 
 
-<p>California publicó una <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">orientación para ayudar a los líderes de la educación K-12<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> a satisfacer las necesidades de todos los alumnos afectados por los cierres de escuelas, con un énfasis en la asistencia para los niños de familias de bajos ingresos y con discapacidades. </p>
+<p>California publicó una <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">orientación para ayudar a los líderes de la educación del preescolar al 12.º grado (K-12)</a> a satisfacer las necesidades de todos los alumnos afectados por los cierres de escuelas, con un énfasis en la asistencia para los niños de familias de bajos ingresos y con discapacidades. </p>
 
 
 
-<p>Los Centros para el Control y la Prevención de Enfermedades (Centers for Disease Control and Prevention, CDC) también han emitido recomendaciones para reanudar la instrucción segura en persona. Consulte cómo se compara la guía de los CDC con la del Departamento de Salud Pública de California en <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">Paso seguro entre la guía de los CDC y la guía para escuelas K-12 de California<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
+<p>Los Centros para el Control y la Prevención de Enfermedades (Centers for Disease Control and Prevention, CDC) también han emitido recomendaciones para reanudar la instrucción segura en persona. Consulte cómo se compara la guía de los CDC con la del Departamento de Salud Pública de California en <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC: Paso seguro entre la guía de los CDC y la guía para escuelas K-12 de California</a>.</p>
 
 
 
@@ -239,7 +239,7 @@
 
 
 
-<p>Se dispone de una <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--es.pdf">guía provisional para las instituciones de educación superior<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> para ayudar a las instituciones y sus comunidades a planear y prepararse para reanudar la instrucción en persona.</p>
+<p>Se dispone de una <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--es.pdf">guía provisional para las instituciones de educación superior</a> para ayudar a las instituciones y sus comunidades a planear y prepararse para reanudar la instrucción en persona.</p>
 
 
 
@@ -302,7 +302,7 @@
             <p>Las escuelas de jardín de niños a doceavo grado (K-12) pueden reabrir para la enseñanza en persona de acuerdo con la <a href="https://schools.covid19.ca.gov/">guía para escuelas K-12<span class="pdf-link-icon no-underline-icon" aria-hidden="true"> PDF</span></a>. Las escuelas de jardín de niños a sexto grado (K-6) pueden abrir una vez que su condado tenga una tasa de casos de menos de 25 casos por cada 100,00 habitantes (ajustada) y si las escuelas han seguido los otros procesos para la reapertura de escuelas descritos en la guía. </p>
 <p>Las escuelas secundarias y preparatorias pueden abrir una vez que el condado se encuentre en el nivel Sustancial (rojo) y también haya seguido la guía de reapertura de escuelas. El primer día que las escuelas son elegibles para reabrir de acuerdo con alguno de los criterios es el día después de que el condado cumpla la métrica correspondiente (tasa de casos de menos de 25 o estar en el nivel Sustancial [rojo]) del <a href="/es/safer-economy/" data-type="URL" data-id="/es/safer-economy/">Plan para una economía más segura</a> (publicado semanalmente los martes, por lo que las escuelas son elegibles para reabrir los miércoles). </p>
 <p>Las escuelas de los condados que han cumplido los criterios correspondientes para la reapertura de las escuelas según la guía para escuelas K-12 tienen un período de tres semanas para abrir, a partir del día en que el condado cumpla el criterio de reapertura, incluso si el condado deja de cumplir el criterio durante esa ventana (es decir, la tasa de casos es ≥ 25 en un cálculo posterior o la asignación del condado vuelve al nivel Extendido [púrpura] durante la ventana). El objetivo de la ventana de tres semanas es facilitar la reapertura escolar de forma tranquila y segura.</p>
-<p>Obtenga más información sobre la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guía para escuelas<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
+<p>Obtenga más información sobre la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guía para escuelas</a>.</p>
 
                   </div>
                 </div>
