--- a/tl/education/index.html
+++ b/tl/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Edukasyon</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 26, 2021 sa 12:16 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 11, 2021 sa 11:29 AM</p>
           
         </div>
       </div>
@@ -227,11 +227,11 @@
 
 
 
-<p>Naglabas ang California ng <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">gabay para tulungan ang mga pinuno ng edukasyon para sa K-12<span class="pdf-link-icon no-underline-icon" aria-hidden="true">na nasa PDF</span></a> na matugunan ang mga pangangailangan ng lahat ng mag-aaral na apektado ng mga pagsasara ng paaralan, na binibigyang-diin ang pagtulong sa mga anak na mababa ang kita at ang mga may kapansanan. </p>
+<p>Naglabas ang California ng <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">gabay para tulungan ang mga pinuno ng edukasyon para sa K-12</a> na matugunan ang mga pangangailangan ng lahat ng mag-aaral na apektado ng mga pagsasara ng paaralan, na binibigyang-diin ang pagtulong sa mga anak na mababa ang kita at ang mga may kapansanan. </p>
 
 
 
-<p>Naglabas din ang CDC ng mga rekomendasyon para maipagpatuloy ang ligtas at in-person na pagtuturo. Tingnan kung paano maikukumpara ang gabay ng CDC sa gabay ng California Department of Public Health sa <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-Crosswalk na Gabay sa Mga K-12 na Paaralan ng California<span class="pdf-link-icon no-underline-icon" aria-hidden="true">na nasa PDF</span></a>.</p>
+<p>Naglabas din ang CDC ng mga rekomendasyon para maipagpatuloy ang ligtas at in-person na pagtuturo. Tingnan kung paano maikukumpara ang gabay ng CDC sa gabay ng California Department of Public Health sa <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-Crosswalk na Gabay sa Mga K-12 na Paaralan ng California</a>.</p>
 
 
 
@@ -239,7 +239,7 @@
 
 
 
-<p>May available na pansamantalang <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--tl.pdf">gabay para sa mga institusyon ng mas mataas na edukasyon<span class="pdf-link-icon no-underline-icon" aria-hidden="true">na nasa PDF</span></a> na makakatulong sa mga institusyon at sa kanilang mga komunidad na planuhin at paghandaan ang pagbalik sa personal na pagtuturo.</p>
+<p>May available na pansamantalang <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--tl.pdf">gabay para sa mga institusyon ng mas mataas na edukasyon</a> na makakatulong sa mga institusyon at sa kanilang mga komunidad na planuhin at paghandaan ang pagbalik sa personal na pagtuturo.</p>
 
 
 
@@ -302,7 +302,7 @@
             <p>Maaaring magbukas ulit ang mga K-12 na grade school para sa mga in-person na klase alinsunod sa <a href="https://schools.covid19.ca.gov/">Gabay sa Mga K-12 na Paaralan<span class="pdf-link-icon no-underline-icon" aria-hidden="true"> na nasa PDF</span></a>. Ang mga K-6th grade school ay maaari nang magbukas ulit sa oras na ang kanilang county ay magkaroon ng mababa sa 25 kaso sa kada 100,00 (adjusted) at kung sinunod ng mga paaralan ang iba pang proseso para sa muling pagbubukas ng mga paaralan na nakabalangkas sa gabay. </p>
 <p>Maaari nang magbukas ulit ang mga Middle at High School sa oras na ang county ay mapailalim sa tier na Substantial (pula) at sinunod din ang gabay sa muling pagbubukas ng mga paaralan. Ang unang araw na kwalipikado na muling magbukas ang mga paaralan sa ilalim ng anumang pamantayan ay ang araw matapos matugunan ng county ang nauugnay na sukatan (mababa sa 25 ang bilang ng kaso, o nasa tier na Substantial (pula)) ng <a href="/tl/safer-economy/" data-type="URL" data-id="/tl/safer-economy/">Blueprint para sa Mas Ligtas na Ekonomiya</a> (inilalathala linggu-linggo tuwing Martes, kaya puwedeng muling magbukas ang mga paaralan kapag Miyerkules). </p>
 <p>Ang mga paaralan sa mga county na natugunan ang mga nauugnay na pamantayan para sa muling pagbubukas ayon sa Gabay sa K-12 ay bibigyan ng tatlong linggo bago ang muling pagbubukas, simula sa araw na matugunan ng county ang pamantayan sa muling pagbubukas, kahit na huminto ang county sa pagtugon sa pamantayan sa window na iyon (ibig sabihin, ang bilang ng kaso ay ≥25 sa kasunod na kalkulasyon o ang pagtatalaga sa county ay babalik sa tier na Widespread (purple) sa window na iyon). Ang layunin ng tatlong linggong window ay matiyak ang kalmado at ligtas na muling pagbubukas ng mga paaralan.</p>
-<p>Matuto pa tungkol sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">gabay para sa mga paaralan<span class="pdf-link-icon no-underline-icon" aria-hidden="true">na nasa PDF</span></a>.</p>
+<p>Matuto pa tungkol sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">gabay para sa mga paaralan</a>.</p>
 
                   </div>
                 </div>
