--- a/vi/education/index.html
+++ b/vi/education/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Giáo dục</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;26 tháng 2, 2021 lúc 24:16</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;11 tháng 3, 2021 lúc 11:29</p>
           
         </div>
       </div>
@@ -229,11 +229,11 @@
 
 
 
-<p>California đã đưa ra <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn dành cho Khối Mầm Non-Lớp 12 (Kindergarten to 12th Grade, K-12<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> nhằm hỗ trợ các nhà lãnh đạo trong lĩnh vực giáo dục đáp ứng nhu cầu của mọi học sinh chịu ảnh hưởng do đóng cửa trường học, trong đó chú trọng vào việc hỗ trợ con em của các gia đình có thu nhập thấp và trẻ khuyết tật. </p>
+<p>California đã đưa ra <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn giáo dục K-12 </a>hỗ trợ lãnh đạo đáp ứng nhu cầu của mọi học sinh chịu ảnh hưởng bởi việc đóng cửa của trường học, chú trọng vào hoạt động hỗ trợ trẻ em có thu nhập thấp và trẻ khuyết tật. </p>
 
 
 
-<p>Trung Tâm Kiểm Soát và Phòng Ngừa Dịch Bệnh (Centers for Disease Control and Prevention, CDC) cũng đã đưa ra các đề xuất để tiếp tục giảng dạy trên lớp an toàn. Đối chiếu hướng dẫn của CDC với hướng dẫn của Sở Y Tế Công Cộng California trong <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">Sổ Tay Hướng Dẫn Dành Cho Các Trường Học Thuộc Khối Mầm Non-Lớp 12 tại California của CDC<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
+<p>Trung Tâm Kiểm Soát và Phòng Ngừa Dịch Bệnh (Centers for Disease Control and Prevention, CDC) cũng đã đưa ra các đề xuất để tiếp tục giảng dạy trên lớp an toàn. Hãy xem hướng dẫn của CDC so với Hướng Dẫn của Sở Y Tế Công Cộng California trong <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">Sổ Tay Hướng Dẫn Dành Cho Các Trường Học Thuộc Khối Mầm Non-Lớp 12 tại California của CDC</a>.</p>
 
 
 
@@ -241,7 +241,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--vi.pdf">Hướng dẫn tạm thời cho các tổ chức giáo dục đại học<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> này được đưa ra để giúp các tổ chức và cộng đồng của họ lập kế hoạch và chuẩn bị để trở lại giảng dạy trên lớp.</p>
+<p><a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--vi.pdf">Hướng dẫn tạm thời cho các tổ chức giáo dục đại học</a> này được đưa ra để giúp các tổ chức và cộng đồng của họ lập kế hoạch và chuẩn bị để trở lại giảng dạy trên lớp.</p>
 
 
 
@@ -304,7 +304,7 @@
             <p>Các trường học từ mẫu giáo đến lớp 12 có thể mở cửa trở lại để giảng dạy trên lớp theo <a href="https://schools.covid19.ca.gov/">Hướng Dẫn cho Các Trường Học từ Mẫu Giáo đến Lớp 12<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>. Các trường học từ mẫu giáo đến lớp 6 có thể mở cửa khi quận của họ có tỷ lệ ca mắc dưới 25 ca trên mỗi 100,00 người (đã điều chỉnh) và nếu các trường học tuân thủ các quy trình khác để mở cửa trở lại trường học được nêu trong hướng dẫn đó. </p>
 <p>Các Trường Trung Học Cơ Sở và Phổ Thông có thể mở cửa khi quận của họ thuộc cấp Nghiêm Trọng (màu đỏ) và cũng đã tuân thủ hướng dẫn mở cửa trở lại trường học. Ngày đầu tiên các trường học đủ điều kiện để mở cửa trở lại theo bất kỳ một trong hai tiêu chí là ngày sau khi quận đáp ứng số liệu phù hợp (tỷ lệ ca mắc dưới 25 hoặc thuộc cấp Nghiêm Trọng (màu đỏ)) của <a href="/vi/safer-economy/" data-type="URL" data-id="/vi/safer-economy/">Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</a> (được công bố hàng tuần vào Thứ Ba, do đó các trường học sẽ đủ điều kiện mở cửa trở lại vào Thứ Tư). </p>
 <p>Trường học tại các quận đã đáp ứng các tiêu chí phù hợp để mở cửa trở lại trường học theo Hướng Dẫn cho Mẫu Giáo đến Lớp 12 có khoảng thời gian ba tuần để mở cửa, bắt đầu từ ngày quận đáp ứng các tiêu chí để mở cửa trở lại, ngay cả khi quận không còn đáp ứng các tiêu chí trong suốt khoảng thời gian đó (có nghĩa là tỷ lệ ca mắc ≥25 trong lần tính sau đó hoặc chỉ định quận trở lại cấp Lan Rộng [màu tím] trong suốt khoảng thời gian đó). Mục đích của khoảng thời gian ba tuần này là để tạo điều kiện thuận lợi cho việc mở cửa trở lại trường học một cách bình tĩnh và an toàn.</p>
-<p>Tìm hiểu thêm về <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn dành cho các trường học<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
+<p>Tìm hiểu thêm về <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn dành cho các trường học</a>.</p>
 
                   </div>
                 </div>
