--- a/ar/education/index.html
+++ b/ar/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التعليم</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:16 م الساعة 26 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;11:29 ص الساعة 11 مارس 2021</p>
           
         </div>
       </div>
@@ -227,11 +227,11 @@
 
 
 
-<p>أصدرت ولاية كاليفورنيا <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">إرشادات لمساعدة قادة التعليم من رياض الأطفال إلى الصف الثاني عشر<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>في تلبية احتياجات جميع الطلاب المتضررين من إغلاق المدارس، مع التركيز على مساعدة الأطفال ذوي الدخل المنخفض وذوي الإعاقة. </p>
+<p>أصدرت ولاية كاليفورنيا <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">إرشادات لمساعدة قادة التعليم من رياض الأطفال إلى الصف الثاني عشر</a> في تلبية احتياجات جميع الطلاب المتضررين من إغلاق المدارس، مع التركيز على مساعدة الأطفال ذوي الدخل المنخفض وذوي الإعاقة. </p>
 
 
 
-<p>أصدر مركز مكافحة الأمراض والوقاية منها أيضًا توصيات لاستئناف التعليم الآمن بالحضور الشخصية للطلاب. انظر كيف تُقارن إرشادات مركز مكافحة الأمراض والوقاية منها (CDC) بإرشادات إدارة الصحة العامة بولاية كاليفورنيا في <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">الإرشادات المدرسية للصفوف (K-12) الصادرة عن مركز مكافحة الأمراض والوقاية منها-كاليفورنيا<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
+<p>أصدر مركز مكافحة الأمراض والوقاية منها أيضًا توصيات لاستئناف التعليم الآمن بالحضور الشخصية للطلاب. انظر كيف تُقارن إرشادات مركز مكافحة الأمراض والوقاية منها (CDC) بإرشادات إدارة الصحة العامة بولاية كاليفورنيا في <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">الإرشادات المدرسية للصفوف (K-12) الصادرة عن مركز مكافحة الأمراض والوقاية منها-كاليفورنيا</a>.</p>
 
 
 
@@ -239,7 +239,7 @@
 
 
 
-<p>إن <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--ar.pdf">التوجيه المؤقت لمؤسسات التعليم العالي<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> متاح لمساعدة المؤسسات التعليمية ومجتمعاتها على التخطيط والاستعداد لاستئناف التعليم بالحضور الشخصي.</p>
+<p>إن <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--ar.pdf">التوجيه المؤقت لمؤسسات التعليم العالي</a> متاح لمساعدة المؤسسات التعليمية ومجتمعاتها على التخطيط والاستعداد لاستئناف التعليم بالحضور الشخصي.</p>
 
 
 
@@ -302,7 +302,7 @@
             <p>يمكن إعادة فتح المدارس الصفية من رياض الأطفال حتى الصف الثاني عشر للتعليم بالحضور الشخصي للطلاب وفقًا <a href="https://schools.covid19.ca.gov/">للإرشادات المدرسية من رياض الأطفال وحتى الصف الثاني عشر<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>. قد تفتح المدارس من رياض الأطفال وحتى الصف السادس بمجرد أن يكون معدل الحالات في مقاطعتهم أقل من 25 حالة لكل 100,00 (معدلة) وفي حال كانت المدارس قد اتبعت العمليات الأخرى لإعادة فتح المدارس المبينة في الإرشادات. </p>
 <p>وبوسع المدارس المتوسطة والثانوية أن تفتح أبوابها بمجرد وصول المقاطعة إلى الفئة الكبيرة (أحمر) واتباع إرشادات إعادة فتح المدارس أيضًا. إن اليوم الأول الذي تؤهل فيه المدارس لإعادة افتتاحها بموجب أي من المعيارين هو اليوم التالي لبلوغ المقاطعة واستيفائها المعايير المنصوص عليها (معدل الحالات أقل من 25، أو كونها في الفئة الكبيرة (أحمر) في <a href="/ar/safer-economy/" data-type="URL" data-id="/ar/safer-economy/">مخطط الاقتصاد الأكثر أمانًا</a> (الذي ينشر أسبوعيًا كل يوم ثلاثاء وعلى هذا فإن المدارس مؤهلة لإعادة فتح أبوابها يوم الأربعاء). </p>
 <p>إن المدارس في المقاطعات التي استوفت المعايير المنصوص عليها لإعادة فتح المدرسة وفقًا لإرشادات K-12 أمامها فترة ثلاثة أسابيع لفتحها، حتى وإن توقفت المقاطعة عن استيفاء المعيار خلال تلك الفترة (أي أن معدل الحالة ≥ 25 في عملية حسابية لاحقة أو أن يعود تخصيص المقاطعة إلى الفئة الواسعة الانتشار (البنفسجي) أثناء تلك الفترة. والهدف من فترة الثلاثة أسابيع هو تيسير إعادة فتح المدارس بشكل هادئ وآمن.</p>
-<p>تعرف على المزيد حول <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">التوجيهات الخاصة بالمدارس<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> .</p>
+<p>تعرف على المزيد حول <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">التوجيهات الخاصة بالمدارس</a>.</p>
 
                   </div>
                 </div>
@@ -332,7 +332,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>ما هي متطلبات الصحة والسلامة للمدارس لإجراء التعلم بالحضور الشخصي؟ </h4>
+            <h4>ما هي متطلبات الصحة والسلامة للمدارس لإجراء التعلم بالحضور الشخصي؟  </h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
