--- a/zh-hans/education/index.html
+++ b/zh-hans/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>教育</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月26日, 下午12:16</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月11日, 上午11:29</p>
           
         </div>
       </div>
@@ -227,11 +227,11 @@
 
 
 
-<p>加州发布了</span></a>PDF版<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">指引，以帮助K-12<span class="pdf-link-icon no-underline-icon" aria-hidden="true">教育领导者能满足所有因停课而受影响学生的需求，重点是帮助低收入儿童和残疾儿童。 </p>
+<p>加州发布了<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">相关指引，以帮助K-12</a>教育领导者能满足所有因停课而受影响学生的需求，重点是帮助低收入儿童和残疾儿童。 </p>
 
 
 
-<p>CDC亦发布了有关重新开展安全的面授教学的建议。请参阅</span></a>PDF版<a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-加州K-12学校指引对照表<span class="pdf-link-icon no-underline-icon" aria-hidden="true">，了解CDC指引与加州公共卫生局指引的对比情况。</p>
+<p>CDC亦发布了有关重新开展安全的面授教学的建议。请参阅<a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-加州K-12学校指引对照表</a>，了解CDC指引与加州公共卫生局指引的对比情况。</p>
 
 
 
@@ -239,7 +239,7 @@
 
 
 
-<p>现有可用的</span></a>PDF版<a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--zh-hans.pdf">高等教育机构临时指引<span class="pdf-link-icon no-underline-icon" aria-hidden="true">，可帮助机构及其社区做好重新开展现场教学的计划和准备。</p>
+<p>现有可用的<a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--zh-hans.pdf">高等教育机构临时指引</a>，可帮助机构及其社区做好重新开展现场教学的计划和准备。</p>
 
 
 
@@ -302,7 +302,7 @@
             <p>K-12学校可以按照</span></a>PDF版<a href="https://schools.covid19.ca.gov/">K-12学校指引<span class="pdf-link-icon no-underline-icon" aria-hidden="true">恢复面授课程。K-6学校如果遵循了指引中列出的其他有关重新开放学校的规定，并且所在县确诊率低于每100,00（调整后的数目）人25例，则可以开放。 </p>
 <p>初高中学校如果遵循了重新开放学校指引的规定，并且所在县降级到重度（红色）等级，则可以开放。符合任一标准的学校有资格在其所在县达到<a href="/zh-hans/safer-economy/" data-type="URL" data-id="/zh-hans/safer-economy/">更安全的经济蓝图</a>中的相关标准（即该县确诊率低于每100,00人25例或该县处于重度（红色）等级）后的第二天重新开放（每周二发公布达到标准的郡县，因此符合资格的学校可在周三重新开放）。 </p>
 <p>所在县符合相关标准的学校可根据K-12指引的规定重新开放，且重新开放前有三周准备时间，时间从其所在县符合重新开放标准的那天开始计算，即使该县在这段时间内未达到标准（即这段时间内，该县的确诊率经计算再次 ≥25或该县再次升级到广泛传播【紫色】等级），亦可重新开放。设定三周准备时间旨在促进学校稳妥且安全地重新开放。</p>
-<p>详细了解</span></a>PDF版<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">学校指引<span class="pdf-link-icon no-underline-icon" aria-hidden="true">。</p>
+<p>详细了解<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">学校指引</a>。</p>
 
                   </div>
                 </div>
