--- a/zh-hant/education/index.html
+++ b/zh-hant/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>教育</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月26日, 下午12:16</p>
+            <p class="small-text">最近更新&nbsp;2021年3月11日, 上午11:29</p>
           
         </div>
       </div>
@@ -227,11 +227,11 @@
 
 
 
-<p>加州發佈了</span></a>PDF版<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">相關指引，以幫助K-12<span class="pdf-link-icon no-underline-icon" aria-hidden="true">教育領導者能滿足所有因停課而受影響學生的需求，重點是幫助低收入兒童和殘疾兒童。 </p>
+<p>加州發佈了<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">相關指引，以幫助K-12</a>教育領導者能滿足所有因停課而受影響學生的需求，重點是幫助低收入兒童和殘疾兒童。 </p>
 
 
 
-<p>CDC亦發佈了有關重新開展安全的面授教學的建議。請參閱</span></a>PDF版<a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-加州K-12學校指引對照表<span class="pdf-link-icon no-underline-icon" aria-hidden="true">，了解CDC指引與加州公共衛生局指引的對比情況。</p>
+<p>CDC亦發佈了有關重新開展安全的面授教學的建議。請參閱<a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-加州K-12學校指引對照表</a>，了解CDC指引與加州公共衛生局指引的對比情況。</p>
 
 
 
@@ -239,7 +239,7 @@
 
 
 
-<p>現有可用的</span></a>PDF版<a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--zh-hant.pdf">高等教育機構臨時指引<span class="pdf-link-icon no-underline-icon" aria-hidden="true">，可協助機構及其社區做好恢復現場教學的規劃及準備。</p>
+<p>現有可用的<a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--zh-hant.pdf">高等教育機構臨時指引</a>，可協助機構及其社區做好恢復現場教學的規劃及準備。</p>
 
 
 
@@ -302,7 +302,7 @@
             <p>K-12學校可以按照</span></a>PDF版<a href="https://schools.covid19.ca.gov/">K-12學校指引<span class="pdf-link-icon no-underline-icon" aria-hidden="true">恢復面授課程。K-6學校如果遵循了指引中列出的其他有關重新開放學校的規定，並且所在縣確診率低於每100,00（調整后的數目）人25例，則可以開放。 </p>
 <p>初高中學校如果遵循了重新開放學校指引的規定，並且所在縣降級到重度（紅色）等級，則可以開放。符合任一標準的學校有資格在其所在縣達到<a href="/zh-hant/safer-economy/" data-type="URL" data-id="/zh-hant/safer-economy/">更安全的經濟藍圖</a>中的相關標準（即該縣確診率低於每100,00人25例或該縣處於重度（紅色）等級）后的第二天重新開放（每週二發公佈達到標準的郡縣，因此符合資格的學校可在週三重新開放）。 </p>
 <p>所在縣符合相關標準的學校可根據K-12指引的規定重新開放，且重新開放前有三周準備時間，時間從其所在縣符合重新開放標準的那天開始計算，即使該縣在這段時間內未達到標準（即這段時間內，該縣的確診率經計算再次≥25或該縣再次升級到廣泛傳播（紫色）等級），亦可重新開放。設定三周準備時間旨在促進學校穩妥且安全地重新開放。</p>
-<p>詳細了解</span></a>PDF版<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">學校指引<span class="pdf-link-icon no-underline-icon" aria-hidden="true">。</p>
+<p>詳細了解<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">學校指引</a>。</p>
 
                   </div>
                 </div>
