--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -454,7 +454,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-<div class="bg-lightblue full-bleed mb-neg-2">
+<div class="bg-lightblue full-bleed mb-0">
   <div class="container pt-4 pb-5">
     <h2 class="text-center color-orange">Infections by group</h2>
     <div class="col-lg-12 bg-white px-4 py-4">
