Update page - vaccines.html fe1179ae81fea2ac17f025b9b3dece82816907be

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 12, 2021 at 4:41 PM</p>
+            <p class="small-text">Last updated&nbsp;March 12, 2021 at 4:51 PM</p>
           
         </div>
       </div>
@@ -446,11 +446,19 @@
 
 
 
+<p><strong>Geographic requirements by county</strong></p>
+
+
+
 <p>Due to high demand and limited supply, each county is setting their own geographic requirements. Most limit vaccination to those who live or work within the county. Appointments not satisfying the local requirements may be cancelled, even after you arrive at the vaccination site. Check the county’s vaccination website to make sure you are eligible before making an appointment.</p>
 
 
 
 <div style="display:none;" class="js-qa js-qa-question">How can educators and childcare providers get their COVID-19 vaccine appointments?</div>
+
+
+
+<p><strong>Special code for educators and childcare providers</strong></p>
 
 
 
