ADD pages/guidancefeed/cdph/6fd6843530d58f6b5db5c54ec7202a8c.html 7e3fc20050224da763b9fce43ae2713997e4cadf

--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;5:40 م الساعة 12 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:18 ص الساعة 13 مارس 2021</p>
           
         </div>
       </div>
@@ -163,6 +163,22 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47251 -->March 11, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom issued the following statement today regarding President Biden’s plan to expand COVID-19 vaccine access to all adults by May 1: “With President Biden’s announcement, the light at the en...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-085.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#349)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--07092ee77864445a96d4d9281ebb68d3 -->March 11, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19 and updates to the state's COVID-19 response.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-084.aspx" lang="en-US" hreflang="en-US" rel="external">Two Million COVID-19 Vaccine Doses Delivered to California’s Hardest-Hit Communities, Prompting Update of State’s Reopening Plan</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--6fd6843530d58f6b5db5c54ec7202a8c -->March 11, 2021</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced that 2 million doses of COVID-19 vaccine have been administered to Californians in some of the state’s hardest-hit communities, increasing immunity where ...</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
