--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;March 12, 2021 at 5:40 PM</p>
+            <p class="small-text">Last updated&nbsp;March 13, 2021 at 9:18 AM</p>
           
         </div>
       </div>
