--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 13, 2021 sa 10:32 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 13, 2021 sa 2:47 PM</p>
           
         </div>
       </div>
@@ -163,6 +163,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47311 -->March 12, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom, Senate President pro Tempore Toni Atkins and Assembly Speaker Anthony Rendon today issued the following joint statement on additional support for businesses and employees grappling wit...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-086.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#350)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--543cd36159e210b6ad02beae6f27561f -->March 12, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
