--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;13 tháng 3, 2021 lúc 10:32</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;13 tháng 3, 2021 lúc 14:47</p>
           
         </div>
       </div>
@@ -165,6 +165,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47311 -->March 12, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom, Senate President pro Tempore Toni Atkins and Assembly Speaker Anthony Rendon today issued the following joint statement on additional support for businesses and employees grappling wit...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-086.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#350)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--543cd36159e210b6ad02beae6f27561f -->March 12, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
