--- a/food-resources/index.html
+++ b/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Food and food assistance</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 2:44 PM</p>
+            <p class="small-text">Last updated&nbsp;March 15, 2021 at 9:14 AM</p>
           
         </div>
       </div>
@@ -194,6 +194,14 @@
 
 
 <ul><li>Check the <a href="https://www.cdss.ca.gov/Portals/9/CalFresh/EBTOnline/EBT%20Online%20Q&amp;A%20FAQ%20Sheet_FINAL.pdf">frequently asked questions</a> about using EBT online.&nbsp;</li><li>Find which <a href="https://www.cdss.ca.gov/Portals/9/CalFresh/EBTOnline/EBT%20Online%20Available%20Now%20Flyer_FINAL.pdf">stores offer home delivery or pickup</a> using EBT.</li><li>See all <a href="https://www.cdss.ca.gov/Portals/9/CalFresh/EBTOnline/Participating%20Stores%20List_EN_ADA11.24.pdf">participating Albertsons, Vons, and Safeway</a> locations.</li></ul>
+
+
+
+<h4><strong>Temporary expanded </strong><strong>eligibility</strong><strong> for college students</strong></h4>
+
+
+
+<p>Beginning January 16, 2021, some students are eligible to receive CalFresh benefits to help pay for groceries. Learn more about the <a href="https://www.cdss.ca.gov/Portals/9/CAFSP/CalFresh/Outreach/Resources/Flyer_Temp.%20Student%20Eligibility_FINA.pdf">temporary changes to student eligibility</a> and how to <a href="https://www.getcalfresh.org/students">apply online</a>.</p>
 
 
 
